# controllers/index.js
@@ -60,9 +60,9 @@ const oneContact = (req, res, next) => {
 
 const createContact = (req, res, next) => {
     /*  #swagger.parameters['obj'] = {
-            in: 'body',
-            description: 'Add a user',
-            schema: { $ref: '#/definitions/AddUser' }
+        in: 'body',
+        description: 'Add a user',
+        schema: { asdf: 'qwer' }
     } */
     try {
         async function run() {
